Yagnitech Website :: Whatsapp logo alignment corrected

--- a/css/style.css
+++ b/css/style.css
@@ -1137,6 +1137,7 @@ span.fab.mr-2.fa-whatsapp-square{
 .whatsapp
 {
     height: 13px;
+    margin-top:-3px;
 }
 /*-- //footer --*/
 /*-- move top --*/
